feat: time registry and task are up
